# mindara

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  Procfile  README.md  crear_eventos_concurrentes.py  crear_eventos_nuevos.py  crear_eventos_prueba.py  crear_notificaciones_prueba.py  dev.sh  init_eventos_data.py  pyproject.toml  render.yaml  requirements.txt
apps/authentication/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/eventos/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/frontend/: apps.py  forms.py  urls.py  views.py
apps/notificaciones/: admin.py  forms.py  models.py  urls.py  views.py
apps/reportes/: admin.py  models.py  tests.py  urls.py  views.py
core/: middleware.py  settings.py  settings.py.backup  urls.py  views.py
docs/developer/: LOGBOOK.md
docs/release/: v0.2.0.md
requirements/: base.txt  local.txt  production.txt
scripts/maintenance/: update_log.sh
static/css/: mindara.css  style.css
static/js/: main.js
templates/: base.html  home.html
templates/eventos/: eventos.html  notificaciones.html  perfil.html  perfil_new.html
templates/frontend/: ayuda.html  ayuda.html.new  base.html  create_user.html  dashboard.html  dashboard.html.backup  edit_user.html  eventos_usuarios_stats.html  login.html  terminos.html  user_management.html
templates/notificaciones/: crear.html  crear_rapida.html  editar.html  eliminar.html  lista.html  mis_notificaciones.html
templates/reportes/: historial.html  index.html
(+8 files in other folders)
